[project]
name = "builder-specs"
version = "0.1.0"
description = "Ethereum Builder-API specifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blacken-docs>=1.16.0",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
]

[tool.codespell]
skip = "beacon-apis,dist"